fixes to font scaling on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -11,6 +11,10 @@
   .projects {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .ptext {
+    font-size: 20px;
+  }
 }
 
 // Tablets and small laptops
@@ -65,12 +69,20 @@
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .ptext {
+    font-size: 20px;
+  }
 }
 
 // Phones
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  main#home {
+    padding: 2rem;
   }
 
   .projects {
